--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ asyncio_mode = auto
 python_files = *_test.py *_tests.py test_*.py
 env =
     DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/test_data_base
+    MODE=TEST
