--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.11"
 services:
   db:
-    container_name: database
+    container_name: db
     image: postgres:15
     env_file:
       - .env
@@ -9,11 +9,11 @@ services:
       - 5432:5432
 
   redis:
-    container_name: redis_cache
+    container_name: redis
     image: redis:7
 
   app:
-    container_name: booking_app
+    container_name: app
     build:
       context: .
     env_file:
@@ -26,7 +26,7 @@ services:
       - redis
 
   celery:
-    container_name: celery_app
+    container_name: celery
     build:
       context: .
     command: ["./scripts/celery.sh", "celery"]
