--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,5 @@ pythonpath = . app
 asyncio_mode = auto
 python_files = *_test.py *_tests.py test_*.py
 env =
-    DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/test_data_base
+    DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/test_postgres
     MODE=TEST
